--- a/createFileTest.vcxproj.filters
+++ b/createFileTest.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClInclude Include="IVHD.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="LocalManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="IVHD.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LocalManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="소스.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
