add vhd class, createfile parameter

--- a/createFileTest.vcxproj
+++ b/createFileTest.vcxproj
@@ -154,12 +154,13 @@
     <ClCompile Include="IVHD.cpp" />
     <ClCompile Include="LocalManager.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="소스.cpp" />
+    <ClCompile Include="VHD.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IVHD.h" />
     <ClInclude Include="LocalManager.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="VHD.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
