--- a/createFileTest.vcxproj.filters
+++ b/createFileTest.vcxproj.filters
@@ -15,13 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>소스 파일</Filter>
-    </ClInclude>
     <ClInclude Include="IVHD.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="LocalManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="VHD.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -35,7 +38,7 @@
     <ClCompile Include="LocalManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="소스.cpp">
+    <ClCompile Include="VHD.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
