--- a/PlanB-Executor-prototype.vcxproj.filters
+++ b/PlanB-Executor-prototype.vcxproj.filters
@@ -4,9 +4,6 @@
     <ClCompile Include="BackupExecutor.cpp">
       <Filter>소스</Filter>
     </ClCompile>
-    <ClCompile Include="Bitmap.cpp">
-      <Filter>소스</Filter>
-    </ClCompile>
     <ClCompile Include="IVHD.cpp">
       <Filter>소스</Filter>
     </ClCompile>
@@ -16,7 +13,7 @@
     <ClCompile Include="VHD.cpp">
       <Filter>소스</Filter>
     </ClCompile>
-    <ClCompile Include="VSSClass.cpp">
+    <ClCompile Include="Backup.cpp">
       <Filter>소스</Filter>
     </ClCompile>
   </ItemGroup>
@@ -24,26 +21,23 @@
     <ClInclude Include="BackupExecutor.h">
       <Filter>헤더</Filter>
     </ClInclude>
-    <ClInclude Include="Bitmap.h">
-      <Filter>헤더</Filter>
-    </ClInclude>
     <ClInclude Include="IVHD.h">
-      <Filter>헤더</Filter>
-    </ClInclude>
-    <ClInclude Include="PlanBCommon.h">
-      <Filter>헤더</Filter>
-    </ClInclude>
-    <ClInclude Include="stdafx.h">
       <Filter>헤더</Filter>
     </ClInclude>
     <ClInclude Include="VHD.h">
       <Filter>헤더</Filter>
     </ClInclude>
-    <ClInclude Include="VSSClass.h">
-      <Filter>헤더</Filter>
+    <ClInclude Include="PlanBCommon.h">
+      <Filter>헤더\common</Filter>
+    </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>헤더\common</Filter>
     </ClInclude>
     <ClInclude Include="stringToolset.h">
-      <Filter>헤더</Filter>
+      <Filter>헤더\common</Filter>
+    </ClInclude>
+    <ClInclude Include="backup.h">
+      <Filter>헤더\common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -52,6 +46,9 @@
     </Filter>
     <Filter Include="헤더">
       <UniqueIdentifier>{472ae27b-92cf-4d6f-be9d-14c6210814ad}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="헤더\common">
+      <UniqueIdentifier>{3c27f7cc-40f3-4d1e-977a-69f0f7889829}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
