--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 bld/
 [Bb]in/
 [Oo]bj/
+*.row
+*.bitmap
 
 # Visual Studio 2015 cache/options directory
 .vs/
@@ -240,3 +242,4 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+*.raw
