--- a/PlanB-Executor-prototype.vcxproj
+++ b/PlanB-Executor-prototype.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="IVHD.cpp" />
     <ClCompile Include="BackupExecutor.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SystemBackup.cpp" />
     <ClCompile Include="VHD.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -166,7 +167,7 @@
     <ClInclude Include="BackupExecutor.h" />
     <ClInclude Include="PlanBCommon.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="stringToolset.h" />
+    <ClInclude Include="SystemBackup.h" />
     <ClInclude Include="VHD.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
