--- a/PlanB-Executor-prototype.vcxproj.filters
+++ b/PlanB-Executor-prototype.vcxproj.filters
@@ -104,5 +104,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
